package logistica.domain;

public enum EstadoRuta {
  PLANIFICADA,
  EN_CURSO,
  COMPLETADA
}